@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-22T08:20:55Z",
+  "timestamp" : "2022-11-23T01:12:27Z",
   "count_outdated" : 670,
   "uniques_outdated" : 380,
-  "count" : 702,
+  "count" : 703,
   "uniques" : 397,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-11-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
